# agentic-trading-system

./: .env.example  .env.postgresql  .gitignore  .gitignore.bak  .pre-commit-config.yaml  LICENSE  MCP_GITHUB_CONFIGURATION.md  PHASE5_README.md  README-Docker.md  README.md  activate_agents.py  build.gradle.kts  docker-compose.e2e.yml  docker-compose.postgresql.yml  docker-compose.yml  github-repository-descriptions.txt  inspect_memory_structure.py  market_server.py  run_phase5.py  verify_postgres_data.py
.context/: COMMIT_1_DETAILED_SPECS.md  MCP_TRADING_SYSTEM_COMMIT_PLAN.md
.github/: agentic-staging-check.md
.github/scripts/: staging-psql.sh
.github/workflows/: agentic-staging-check.yml  backend-lint.yml  dockerfile-lint.yml  e2e.yml  frontend-lint.yml  main.yml  promote-prod.yml  python-lint.yml  refresh-model-prices.yml
.roo/rules/: agentic_trading_system_implementation.md  commit_push_approval.md
.serena/: project.yml
.serena/memories/: agentic-trading-architecture.md
agentic-trading-system/: .gitignore
agents/: .dockerignore  .env.example  Dockerfile  agent_executor.py  agent_orchestrator.py  agent_registry.py  api_server.py  backend_client.py  base_agent.py  cathie_agent.py  config.py  decision_maker.py  exceptions.py  george_agent.py  guardrail_retry.py  http_client.py  logging_config.py  market_analyst.py  market_tools.py  mcp_connector.py  mcp_params.py  mcp_params_minimal.py  mcp_types.py  memory_config.py  memory_tools.py  pricing.py  prompt_loader.py  pyproject.toml  pytest.ini  ray_agent.py  requirements.txt  researcher.py  researcher_agent.py  run_lifecycle.py  run_tracking.py  simple_trader.py  simple_trader_test.py  status_broadcaster.py  telemetry.py  test_agent_foundation.py  (+5 more)
agents/ai_agents/: decision_maker.py  guardrail_retry.py  market_analyst.py  simple_trader.py
agents/api/: server.py
agents/backend/: auth.py  client.py  run_lifecycle.py  run_tracking.py  status_broadcaster.py
agents/infra/: MODEL_PRICES_README.md  constants.py  exceptions.py  http_client.py  pricing.py  prompt_loader.py  telemetry.py
agents/mcp-servers/: accounts_server.py  market_server.py  mcp_params.py
agents/mcp_helpers/: params.py  types.py
agents/models/: __init__.py  api_responses.py  internal_state.py  investment_style.py  llm_output.py  mcp_types.py  orchestration.py  run_tracking.py  usage_metrics.py
agents/phase_runner/: __init__.py  _lifecycle.py  _telemetry.py  cycle.py
agents/phases/: decision_phase.py  execution_phase.py  finalization.py  research_phase.py
agents/prompts/decision_maker/: base.txt  cathie.txt  george.personality.txt  george.txt  ray.txt  warren.personality.txt  warren.txt
agents/prompts/market_analyst/: base.txt  cathie.txt  george.personality.txt  george.txt  ray.personality.txt  ray.txt  warren.txt
agents/tests/: __init__.py  conftest.py  test_agent_executor.py  test_agent_registry.py  test_api_server.py  test_auth.py  test_backend_client.py  test_backend_client_retry.py  test_decision_maker.py  test_decision_phase.py  test_guardrail_e2e_integration.py  test_guardrail_retry.py  test_market_analyst.py  test_market_tools.py  test_phase_runner.py  test_prompt_loader.py  test_research_phase.py  test_researcher.py  test_run_lifecycle.py  test_sdk_parser.py  test_simple_trader.py  test_status_broadcaster.py  test_trading_system.py  test_trading_tools_error_propagation.py
agents/tests/e2e/: __init__.py  conftest.py  seed_data.py  test_decision_maker_e2e.py  test_full_cycle_e2e.py  test_market_analyst_e2e.py
agents/tools/: market_tools.py  trading_tools.py
agents/utils/: __init__.py  sdk_parser.py
backend/: .dockerignore  .gitignore  Dockerfile  build.gradle.kts  settings.gradle.kts
backend/docs/: api-refactoring-architecture.md  api-refactoring-plan.md  api-refactoring-quick-reference.md  api-refactoring-summary.md
context_portal/: context.db
context_portal/conport_vector_data/: chroma.sqlite3
database/: README.md
database/init/: 01-init-database.sql  02-create-schema.sql
docs/: ACTUAL_MEMORY_SOLUTION.md  AGENT_MEMORY_ARCHITECTURE_ANALYSIS.md  ARCHITECTURAL_SPECIFICATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  MCP_PROTOCOL_COMMUNICATION_GUIDE.md  MCP_REMOTE_SERVERS_SPECIFICATION.md  MEMORY_TOOLS_PLAN.md  PHASE5_README.md  PHASE_7_TECHNICAL_SPECIFICATIONS.md  QUICK_MEMORY_DECISION_GUIDE.md  REMOTE_MCP_ARCHITECTURE.md  RESEARCHER_DB_ENHANCEMENT_PLAN.md  SIMPLE_TRADER_REVIEW.md  STORAGE_ARCHITECTURE.md
frontend/: .dockerignore  .env.example  .gitignore  API_CONFIGURATION.md  Dockerfile  Dockerfile.production  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: AgentComparison.module.css  AgentComparison.tsx  AgentDetail.test.tsx  AgentDetail.tsx  App-403-no-flash.test.tsx  App-admin.test.tsx  App-pagination.test.tsx  App.css  App.test.tsx  App.tsx  AppLayout.test.tsx  AppLayout.tsx  DecisionSection.tsx  Disclaimer.test.tsx  Disclaimer.tsx  DisclaimerBanner.test.tsx  ExecutionSection.tsx  Footer.test.tsx  Footer.tsx  Login-a11y.test.tsx  Login.test.tsx  Login.tsx  NavigatorSetup.tsx  PhaseMetrics.test.tsx  PhaseMetrics.tsx  PortfolioChart.tsx  PositionsTable.tsx  PromptsAccordion.test.tsx  PromptsAccordion.tsx  ProtectedRoute.tsx  ResearchSection.tsx  RunDetail.test.tsx  RunDetail.tsx  ToolCallsTable.test.tsx  ToolCallsTable.tsx  agentComparison.test.ts  agentComparison.ts  api-403-handling.test.ts  api-admin.test.ts  api-jwt.test.ts  (+19 more)
mcp-servers/: .dockerignore  Dockerfile  accounts_server.py  market_server.py  push_server.py  requirements.txt
reports/ci-cycles/: CI_CYCLE_REPORT_20260713T072456Z.md  CI_CYCLE_REPORT_20260713T073137Z.md  CI_CYCLE_REPORT_20260713T083600Z.md  CI_CYCLE_REPORT_20260714T072659Z.md  CI_CYCLE_REPORT_20260716T074939Z.md  CI_CYCLE_REPORT_20260716T075600Z.md  CI_CYCLE_REPORT_20260716T080500Z.md  CI_CYCLE_REPORT_20260718T061942Z.md  CI_CYCLE_REPORT_20260722T092448Z.md  README.md  (+1 more)
udemy-context/: day-1.txt  day-2.txt  day-3.txt  day-4.txt  day-5.txt
(+380 files in other folders)
