[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This project is a flat collection of scripts, not a distributable package.
# Disable automatic package discovery to avoid build errors.
packages = []

[project]
name = "agentic-trading-agents"
version = "0.1.0"
description = "AI trading agents for the Agentic Trading System"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.16.1",
    "openai>=2.36.0",
    "python-dotenv>=1.2.2",
    "pydantic>=2.13.4",
    "aiohttp>=3.13.5",
    "httpx>=0.28.1",
    "h2>=4.0.0",
    "mcp>=1.27.0,<2",
    "requests>=2.33.1",
    "flask>=3.1.3",
    "tenacity>=9.1.4",
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=1.0,<2.0",
    "pytest-mock>=3.15.0",
    "pytest-docker>=3.1.0",
    "aioresponses>=0.7.8",
    "psycopg2-binary>=2.9.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests/e2e"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
# Function-scope event loops match BackendClient's loop-aware singleton
# (see agents/backend_client.py "loop-local singleton" invariant).  Each
# test gets its own asyncio event loop; BackendClient detects the loop-ID
# change and recreates its underlying httpx.AsyncClient on the new loop.
# This prevents cross-test event-loop leakage and the classic
# "RuntimeError: Event loop is closed" failure mode caused by sockets
# bound to a dead loop from a previous test.
# Refs: pytest-asyncio per-function loop scope
#   https://pytest-asyncio.readthedocs.io/en/stable/how-to-guides/change_default_fixture_loop.html
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "e2e: marks tests as end-to-end (requires real integrations, deselect with '-m \"not e2e\"')",
    "slow: marks tests as slow (LLM calls)",
    "costly: marks tests as costly (real API calls with billing)",
]
