[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This project is a flat collection of scripts, not a distributable package.
# Disable automatic package discovery to avoid build errors.
packages = []

[project]
name = "agentic-trading-agents"
version = "0.1.0"
description = "AI trading agents for the Agentic Trading System"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.16.1",
    "openai>=2.36.0",
    "python-dotenv>=1.2.2",
    "pydantic>=2.13.4",
    "aiohttp>=3.13.5",
    "httpx>=0.28.1",
    "h2>=4.0.0",
    "mcp>=1.27.0,<2",
    "requests>=2.33.1",
    "flask>=3.1.3",
    "tenacity>=9.1.4",
    "cachetools>=5.3.0",
    "python-json-logger>=3.2.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=1.0,<2.0",
    "pytest-mock>=3.15.0",
    "pytest-docker>=3.1.0",
    "aioresponses>=0.7.8",
    "psycopg2-binary>=2.9.0",
    "mypy==1.15.0",
]
# ruff and mypy are pinned to exact versions: both gate the CI pipeline, and
# a floating range lets a new release reformat code or surface new findings on
# an unrelated push. Bump deliberately when we choose to review the churn.
lint = [
    "ruff==0.15.20",
    "mypy==1.15.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "venv",
    ".venv",
    ".mypy_cache",
    ".ruff_cache",
    "logs",
    "*.egg-info",
    "__pycache__",
]

[tool.ruff.lint]
# E/W = pycodestyle errors/warnings, F = pyflakes, I = isort,
# B = flake8-bugbear, UP = pyupgrade, N = pep8-naming.
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = [
    # Line-too-long is noisy on log messages and long literal strings; the
    # formatter handles obvious cases and we accept the rest.
    "E501",
]
# Treat any leading-underscore name as intentionally unused so positional
# placeholders required by external SDK signatures (e.g. guardrail
# validators where the function shape is fixed by the framework) don't
# trip unused-argument or unused-variable rules.
dummy-variable-rgx = "^_.*"

[tool.ruff.lint.per-file-ignores]
# Test conftest files intentionally set env vars before importing modules
# that read them at import time; keep the import-order pragma scoped.
"tests/conftest.py" = ["E402"]
"tests/**/conftest.py" = ["E402"]
# Tests can use assert and may have long string fixtures.
"tests/**/*.py" = ["B011"]
# Pydantic response/request models mirror the Java backend's JSON wire
# shape (camelCase field names + `date as DateType` alias matching the
# backend's typed sub-fields). Renaming would break the API contract.
"models/api_responses.py" = ["N815", "N812"]
"models/llm_output.py" = ["N815"]
"models/run_tracking.py" = ["N815"]
"models/usage_metrics.py" = ["N815"]
# Cross-language enum bridges (str + Enum) are still the safest carrier
# for backend wire compatibility; `StrEnum` has subtle __str__ differences
# that would need a serializer audit before flipping.
"models/*.py" = ["UP042"]
# Public re-export hub: imports are intentionally surfaced via the
# package namespace even when not used inside the module itself.
"models/__init__.py" = ["F401"]
# camelCase argument names here mirror the backend's JSON request shape.
"tools/trading_tools.py" = ["N803"]
# ALLCAPS @property names model URL constants derived from a base URL.
"config.py" = ["N802"]
# Test imports alias module-level constants to local set names for
# readability; the alias is not itself a constant.
"tests/test_agent_registry.py" = ["N811"]

[tool.mypy]
python_version = "3.11"
# Pragmatic defaults: surface real type bugs without requiring full
# annotations on legacy code paths. New code is expected to annotate.
disallow_untyped_defs = false
check_untyped_defs = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
no_implicit_optional = true
ignore_missing_imports = true
exclude = [
    "venv/",
    ".venv/",
    ".mypy_cache/",
    "logs/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
# Tests can stay loose; we care about type safety in production code.
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests/e2e"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
# Function-scope event loops match BackendClient's loop-aware singleton
# (see agents/backend_client.py "loop-local singleton" invariant).  Each
# test gets its own asyncio event loop; BackendClient detects the loop-ID
# change and recreates its underlying httpx.AsyncClient on the new loop.
# This prevents cross-test event-loop leakage and the classic
# "RuntimeError: Event loop is closed" failure mode caused by sockets
# bound to a dead loop from a previous test.
# Refs: pytest-asyncio per-function loop scope
#   https://pytest-asyncio.readthedocs.io/en/stable/how-to-guides/change_default_fixture_loop.html
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "e2e: marks tests as end-to-end (requires real integrations, deselect with '-m \"not e2e\"')",
    "slow: marks tests as slow (LLM calls)",
    "costly: marks tests as costly (real API calls with billing)",
]
